--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,32 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
+  <div id="screen">
     <h1>YOUR GAME HERE!</h1>
+    <button id="change-num">choose different number</button>
+    <h1 id="rounds"> guess #1 </h1>
+
+
+    <div id="input-div">
+      <h1> guesser 1</h1>
+      <input type="number" id="input-1">
+
+      <h1> guesser 2</h1>
+      <input type="number" id="input-2">
+
+      <button id="submit">submit</button>
+    </div>
+  
+
+    <div id="history">
+    </div>
+  </div>
+
+  <div id="screen-winner">
+    <!--
+      <h1> You're the WINNER!!!</h1>
+    -->
+  </div>
+
 </body>
 </html>
